1.9.0
-----

Added the ability to skip the tests when using the Maven target set.  Use -DskipTest=true on the command
line to stop the tests being compiled and run, otherwise they will be.

Change the way in which the final message is output when Gant is executed from the command line from being
hardwired to being the execution of a hook, terminateHook.  cf. GANT-104.


1.8.1
-----

Upgrade to Ivy 2.1.0.

Upgrade to Groovy 1.7-beta-2


1.8.0
-----

Upgrade to using JUnit 4.7, in line with Groovy 1.7.x.

Added the ability for each target to have a per-target prehook and posthook, and for there to be a global
prehook and posthook -- which are the same for all targets.  The hooks can either be a closure or a list of
closures.  Global prehooks are executed before per-target prehooks, which are executed before the build
listeners are informed and the target body is executed.  Global posthooks are executed after the per-target
posthooks which are executed after the target body and the buildlisteners.  The logging of entry and exit to
each target is implemented as the default per-target prehook/posthook. cf.  GANT-90, GANT-99 and GANT-100.

Remove (finally) the name Ant from the binding.  The symbol has been deprecated for ages.

Fixed GANT-91 and GANT-93.

Added nestedJavacCompilerArgs property to the Maven target set to allow for nested compilerarg elements to
the nested javac element of a groovyc element.

Upgraded to using Groovy 1.6.5.


1.7.0
-----

Added the binding variable initiatingTarget which is set by the Gant infrastructure just prior to processing
each target, it allows the Gant script to know what the initiating target is.

Added properties gant.version (the version of Gant currently executing) and gant.file (the initial Gant file
being processed) to the binding to allow the script to process these data.

Upgrade to using Groovy 1.5.8 instead of 1.5.7 as the Groovy 1.5.x version.

Upgrade to using Groovy 1.6.4 instead of 1.6.0 as the Groovy 1.6.x version.
