@@ -7,6 +7,8 @@ line to stop the tests being compiled and run, otherwise they will be.
 Change the way in which the final message is output when Gant is executed from the command line from being
 hardwired to being the execution of a hook, terminateHook.  cf. GANT-104.
 
+Altered the Gant Ant task so as to provide an inheritAll attribute.  cf. GANT-110.
+
 
 1.8.1
 -----
